--- a/Case4/index.html
+++ b/Case4/index.html
@@ -9,6 +9,7 @@
     <title>Clean up</title>
 </head>
 <body>
+    <button>Limpiar completados</button><br>
     <h1>T<span class="completed">r</span>as<span class="completed">h</span>k list</h1>
     <ul id="taskList">
         <li class="completed">Comprar el perro</li>
