--- a/Case6/index.html
+++ b/Case6/index.html
@@ -13,7 +13,7 @@
         <h1>Tasks list</h1>
         <ul id="taskList">
         </ul>
-        <button>Drop completed</button>
+        <button id="boton">Drop completed</button>
     </div>
     <code>
         Conecta el botón "Drop completed" con el handler "removeCompletedHandler".
